[package]
name = "ewebsock-async-tarpc-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.63"
bincode = "1.3.3"
tarpc = { git = "https://github.com/Masterchef365/tarpc.git", branch = "whiz-port", features = ["serde1"] }
serde = "1"
futures-util = "0.3.30"

tokio-tungstenite = { version = "*", optional = true }
